--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.31.0",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.2",
